# spotbin

./: .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
old/: Cargo.toml
old/src/: Info.plist  cli_routine.rs  commands.rs  main.rs  schema.strings  schema.xml
spotbin-importer/: Cargo.toml
spotbin-importer-bundle/: Cargo.toml
spotbin-importer-bundle/scripts/: ld-wrapper.sh
spotbin-importer-bundle/src/: lib.rs
spotbin-util/: Cargo.toml
src/: cli_routine.rs
