[package]
name = "spotbin"
version = "0.1.0"
edition = "2024"

[dependencies]
# core-foundation = {version = "0.10.0", features = ["with-uuid", "mac_os_10_8_features", "link"]}
clap = {version = "4.5.36", features = ["derive", "cargo", "unstable-v5"]}
gimli = "0.31.1"
object = "0.36.7"
objc2 = "0.6.0"
objc2-core-foundation = "0.3.0"
objc2-core-services = "0.0.0"
objc2-core-spotlight = "0.0.0"
objc2-uniform-type-identifiers = "0.3.0"
objc2-core-text = "0.3.0"
